  flows built using AbstractFlowBuilders.
* Added DefaultFlowServiceLocator(String, BeanFactory) convenience constructor to the DefaultFlowServiceLocator.
* Added BeanFactoryFlowVariable(String, BeanFactory, ScopeType) convenience constructor to the
  BeanFactoryFlowVariable.
* Added settableExpression() method to AbstractFlowBuilder.

Package org.springframework.webflow.execution
* Added FlowExecutionListener.sessionCreated(RequestContext, FlowSession) callback, useful for
  setting flow attributes before the flow starts (SWF-223).
* ClientContinuationFlowExecutionRepository now uses 'URL-safe Base64 encoding' (SWF-270).
* AbstractConversationFlowExecutionRepository.parseFlowExecutionKey() now throws an
  BadlyFormattedFlowExecutionKeyException when asked to parse an empty flow execution key (SWF-277).

Package org.springframework.webflow.executor
* Added resource URL encoding to redirects in a JSF environment (SWF-256).
* Added support for configuring a <flow:executor> in a JSF environment, greatly simplifying JSF SWF
  configuration and making it consistent with Spring MVC and Struts.  This also means its much easier
  to benefit from defaults such as a continuation-based flow execution repository and 'alwaysRedirectOnPause'.
* Introduced ResponseInstructionHandler convenience class and refactored FlowController, PortletFlowController,
  FlowAction and FlowPhaseListener to use it.
* JSF flow execution lifecycle now respects flow execution locking contract (SWF-229, SWF-276).
* Fixed bug in FlowPhaseListener that resulted in a NPE on a flow that started and ended in the same request (SWF-273).

Package org.springframework.webflow.test
* Added constructor taking test name argument to AbstractFlowExecutionTests, AbstractExternalizedFlowExecutionTests
  and AbstractXmlFlowExecutionTests.
* Added getFlashAttribute and getRequiredFlashAttribute methods to AbstractFlowExecutionTests.

Package org.springframework.webflow.samples